--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "hyper-python-utils"
-version = "0.1.1"
+dynamic = ["version"]
 description = "AWS S3 and Athena utilities for data processing with Polars"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -53,6 +53,9 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.dynamic]
+version = {attr = "hyper_python_utils.__version__"}
 
 [tool.black]
 line-length = 88
