--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 dependencies = [
     "boto3>=1.26.0",
     "polars>=0.18.0",
+    "pandas>=1.5.0",
 ]
 
 [project.optional-dependencies]
